--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -1,5 +1,17 @@
-@import url(reset.css);
+/* Підключення шрифтів */
 
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
+/* Google Fonts (Plugin) */
+
+/* Локальне підключення шрифтів */
+@import url("fonts.css");
+
+/* Скидання стилів */
+@import url("reset.css");
+
+/* Основні стилі */
 .back-link {
   display: inline-block;
   margin-top: 20px;
@@ -11,7 +23,89 @@
   font-weight: bold;
   transition: background-color 0.3s, transform 0.3s;
 }
+
 .back-link:hover {
   background-color: #218838;
   transform: translateY(-2px);
 }
+
+body {}
+
+.main {}
+
+.huru {
+  font-family: "Ua-Brand", serif;
+  color: rgba(0, 0, 0, .9);
+}
+
+.huru p {
+  color: rgba(0, 0, 0, .5);
+  line-height: 30px;
+  font-size: 22px;
+  font-weight: normal;
+}
+
+.huru p~p {
+  color: rgba(0, 0, 0, .9);
+  line-height: 28px;
+  font-size: 21px;
+  font-weight: normal;
+}
+
+.title {
+  line-height: 64px;
+  font-size: 60px;
+  font-weight: 900;
+}
+
+.subtitle {
+  line-height: 35px;
+  font-size: 26px;
+  font-weight: 900;
+}
+
+.first-bigger {
+  line-height: 64px;
+  font-size: 100px;
+  font-weight: 900;
+}
+
+.blockquote {
+  color: #fff;
+  background-color: #6faa43;
+}
+
+.autobazar {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.autobazar h2 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+footer {
+  font-size: 36px;
+}
+
+footer a {
+  color: #6faa43;
+}
+
+
+/* це дав гугл, може треба буде */
+
+/* .poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+} */
