--- a/lesson_10/css/style.css
+++ b/lesson_10/css/style.css
@@ -1,5 +1,16 @@
-@import url(reset.css);
+/* Підключення фрифтів */
 
+/* Google Fonts */
+/* @import url("https://fonts.googleapis.com/css2?family=Carme&display=swap"); */
+/* Google Fonts (Plugin) */
+
+/* Локальне підключення шрифтів */
+@import url("fonts.css");
+
+/* Скидання стилів */
+@import url("reset.css");
+
+/* Основні стилі */
 .back-link {
   display: inline-block;
   margin-top: 20px;
@@ -15,3 +26,4 @@
   background-color: #218838;
   transform: translateY(-2px);
 }
+
