--- a/lesson_05/css/fonts.css
+++ b/lesson_05/css/fonts.css
@@ -10,26 +10,27 @@
 900 - black 
 */
 
+
 @font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-regular.woff2") format("woff2");
-	font-weight: 400;
+	font-family: 'Circular Std Book';
+	src: url('../fonts/CircularStd-Book.woff2') format('woff2');
+	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
 }
 
-@font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-bold.woff2") format("woff2");
-	font-weight: 700;
+/* @font-face {
+	font-family: 'Circular Std';
+	src: url('../fonts/CircularStd-Medium.woff2') format('woff2');
+	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
-}
+} */
 
 @font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-black.woff2") format("woff2");
-	font-weight: 900;
+	font-family: 'Circular Std';
+	src: url('../fonts/CircularStd-Bold.woff2') format('woff2');
+	font-weight: bold;
 	font-style: normal;
-	font-display: swap;
+
 }
