--- a/lesson_05/css/fonts.css
+++ b/lesson_05/css/fonts.css
@@ -12,9 +12,9 @@
 
 
 @font-face {
-	font-family: 'Circular Std Book';
+	font-family: 'Circular Std';
 	src: url('../fonts/CircularStd-Book.woff2') format('woff2');
-	font-weight: normal;
+	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
@@ -30,7 +30,7 @@
 @font-face {
 	font-family: 'Circular Std';
 	src: url('../fonts/CircularStd-Bold.woff2') format('woff2');
-	font-weight: bold;
+	font-weight: 700;
 	font-style: normal;
 
 }
