--- a/lesson_05/css/style.css
+++ b/lesson_05/css/style.css
@@ -54,21 +54,21 @@
   margin-bottom: 10px;
 }
 
-.main-content h6 {
+.main-content p {
+  font-family: 'Circular Std', 'Arial Rounded', 'Proxima Nova', sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.2px;
+}
+
+.top-title {
   color: #5A54F2;
   font-family: 'Montserrat', Arial, sans-serif;
   font-size: 14px;
   font-weight: 700;
-  line-height: 24px;
+  line-height: 1.7;
   letter-spacing: 0.2px;
   margin-bottom: 10px;
-}
-
-.main-content p {
-  font-family: 'Circular Std Book', 'Arial Rounded', 'Proxima Nova', sans-serif;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0.2px;
 }
 
 .cards {
@@ -81,8 +81,8 @@
   display: inline-block;
   vertical-align: top;
   max-width: 230px;
-  padding-left: 40px;
-  padding-bottom: 35px;
+  width: 100%;
+  padding: 35px 40px;
   margin: 0 20px;
   background-color: #FFF;
 }
@@ -90,8 +90,9 @@
 .card h5 {
   margin-bottom: 20px;
   color: #252B42;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.1px;
 }
 
@@ -101,7 +102,7 @@
   color: #737373;
   font-size: 14px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 1.4;
   letter-spacing: 0.2px;
 }
 
@@ -110,7 +111,7 @@
 }
 
 .icon {
-  margin: 35px 0 20px;
+  margin-bottom: 20px;
 }
 
 .divider {
