--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -40,32 +40,32 @@ body {}
 
 .huru p {
   color: rgba(0, 0, 0, .5);
-  line-height: 30px;
+  line-height: 1.4;
   font-size: 22px;
   font-weight: normal;
 }
 
 .huru p~p {
   color: rgba(0, 0, 0, .9);
-  line-height: 28px;
+  line-height: 1.3;
   font-size: 21px;
   font-weight: normal;
 }
 
 .title {
-  line-height: 64px;
+  line-height: 1.1;
   font-size: 60px;
   font-weight: 900;
 }
 
 .subtitle {
-  line-height: 35px;
+  line-height: 1.3;
   font-size: 26px;
   font-weight: 900;
 }
 
 .first-bigger {
-  line-height: 64px;
+  line-height: 0.64;
   font-size: 100px;
   font-weight: 900;
 }
@@ -80,11 +80,13 @@ body {}
   font-size: 18px;
   font-weight: 400;
   line-height: 150%;
+  color: #808080;
 }
 
 .autobazar h2 {
   font-size: 20px;
   font-weight: 500;
+  color: #1A1A1A;
 }
 
 footer {
