--- a/lesson_06/css/style.css
+++ b/lesson_06/css/style.css
@@ -1,7 +1,8 @@
 /* Підключення фрифтів */
 
 /* Google Fonts */
-/* @import url("https://fonts.googleapis.com/css2?family=Carme&display=swap"); */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,regular,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:regular&display=swap");
 /* Google Fonts (Plugin) */
 
 /* Локальне підключення шрифтів */
@@ -22,8 +23,170 @@
   font-weight: bold;
   transition: background-color 0.3s, transform 0.3s;
 }
+
 .back-link:hover {
   background-color: #218838;
   transform: translateY(-2px);
 }
 
+body {
+  background-color: #302C42;
+}
+
+.wrapper {
+  /* overflow: clip; */
+  min-height: 100%;
+  max-width: 1292px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.autobazar {
+  font-family: 'Poppins', 'Arial', 'Helvetica', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  max-width: 648px;
+  width: 100%;
+  margin: 0 auto;
+  color: #808080;
+  background: #fff;
+}
+
+.text {
+  margin-bottom: 20px;
+}
+
+.text p {
+  margin-bottom: 20px;
+}
+
+.list {
+  margin-bottom: 20px;
+}
+
+.list li {
+  padding-left: 28px;
+  margin-bottom: 14px;
+  background: url(../img/check.png) 0 center / 20px 20px no-repeat;
+  line-height: 140%;
+}
+
+.hydra {
+  color: #fff;
+  font-family: 'Montserrat', 'Arial', 'Helvetica', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  background: url(../img/vector-bg-1.png) -90px 235px no-repeat,
+    url(../img/vector-bg-2.png) -88px 500px no-repeat;
+}
+
+.information {
+  font-size: 0;
+  padding: 25px 40px;
+  border-radius: 90px;
+  background: radial-gradient(2900.76% 50.13% at 50% 53.89%, rgba(58, 52, 86, 0.95) 0%, #211E2E 100%);
+  box-shadow: 0px 4px 4px 0px rgba(192, 183, 232, 0.01);
+  margin-bottom: 90px;
+}
+
+
+.information-item,
+.information-text,
+.line {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.information-title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.information-subtitle {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.line {
+  margin-right: 20px;
+  width: 1px;
+  height: 116px;
+  background-color: rgba(192, 183, 232, 0.33);
+}
+
+.item-1 {
+  max-width: 360px;
+  width: 100%;
+}
+
+.item-2 {
+  max-width: 260px;
+  width: 100%;
+}
+
+.item-3 {
+  max-width: 330px;
+  width: 100%;
+}
+
+.item-1,
+.item-2 {
+  margin-right: 20px;
+}
+
+.item-2 img,
+.item-3 img {
+  margin-right: 20px;
+}
+
+.about {}
+
+.about-image {
+  display: inline-block;
+  margin-left: -12px;
+  width: 524px;
+  height: 557px;
+  border-radius: 240px 100px 240px 100px;
+  overflow: clip;
+  margin-right: 118px;
+}
+
+.about-content {
+  vertical-align: top;
+  display: inline-block;
+  max-width: 630px;
+  width: 100%;
+  padding-top: 50px;
+}
+
+.about-content h1 {
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.about-content h2 {
+  font-size: 36px;
+  font-weight: 300;
+  margin-bottom: 42px;
+}
+
+.about-content p {
+  margin-bottom: 28px;
+  line-height: 1.25;
+}
+
+.button {
+  padding: 17px 40px;
+  border-radius: 40px;
+  width: 100%;
+  max-width: 214px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #343045;
+  background: rgb(129, 118, 175);
+  background: linear-gradient(90deg, rgba(129, 118, 175, 1) 0%, rgba(192, 183, 232, 1) 100%);
+}
