--- a/lesson_06/css/style.css
+++ b/lesson_06/css/style.css
@@ -166,12 +166,14 @@ body {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 5px;
+  text-transform: uppercase;
 }
 
 .about-content h2 {
   font-size: 36px;
   font-weight: 300;
   margin-bottom: 42px;
+  text-transform: uppercase;
 }
 
 .about-content p {
@@ -180,6 +182,7 @@ body {
 }
 
 .button {
+  text-transform: uppercase;
   padding: 17px 40px;
   border-radius: 40px;
   width: 100%;
