--- a/lesson_07/css/style.css
+++ b/lesson_07/css/style.css
@@ -70,11 +70,15 @@
   display: inline-block;
   padding: 20px;
   background-color: #fff;
-  max-width: 386.6px;
+  max-width: 386px;
   width: 100%;
   min-height: 470px;
-  /* height: 100%; */
+  height: 100%;
   vertical-align: top;
+}
+
+.card img {
+  height: 266px;
 }
 
 .card *:not(:last-child) {
@@ -144,9 +148,17 @@
 }
 
 .second-task li {
+  padding-left: 34px;
+  text-indent: -34px;
+  /* для того щоб якщо текст не поміщається,
+  то новий рядок був в один рівень з попереднім */
   color: #4F4F4F;
   font-size: 20px;
-  line-height: 255%;
+  line-height: 155%;
+}
+
+.second-task li:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .second-task li::before {
@@ -162,6 +174,7 @@
 .game {
   max-width: 1000px;
   width: 100%;
+  height: 1000px;
   margin: 0 auto;
   padding-bottom: 40px;
   color: #fff;
@@ -173,131 +186,86 @@
   margin-bottom: 20px;
 }
 
-.game>div {
+.game div {
   background-color: #28a745;
 }
 
-.start {
+[class*="block"] {
+  visibility: hidden;
+  margin-top: -10px;
+  text-align: center;
+}
+
+.game div:hover+div,
+.game div:hover {
+  visibility: visible;
+}
+
+.block_0 {
   width: 50px;
   height: 40px;
   margin: 0 auto;
   padding: 10px;
-}
-
-[class*="block"],
-.finish {
-  visibility: hidden;
-  margin-top: -20px;
-  text-align: center;
-}
-
-.start:hover+.block-10,
-.block-10:hover {
   visibility: visible;
 }
 
-.block-10:hover+.block-20,
-.block-20:hover {
-  visibility: visible;
-}
-
-.block-20:hover+.block-30,
-.block-30:hover {
-  visibility: visible;
-}
-
-.block-30:hover+.block-40,
-.block-40:hover {
-  visibility: visible;
-}
-
-.block-40:hover+.block-50,
-.block-50:hover {
-  visibility: visible;
-}
-
-.block-50:hover+.block-60,
-.block-60:hover {
-  visibility: visible;
-}
-
-.block-60:hover+.block-70,
-.block-70:hover {
-  visibility: visible;
-}
-
-.block-70:hover+.block-80,
-.block-80:hover {
-  visibility: visible;
-}
-
-.block-80:hover+.block-90,
-.block-90:hover {
-  visibility: visible;
-}
-
-.block-90:hover+.finish,
-.finish:hover {
-  visibility: visible;
-}
-
-.game>.block-10 {
-  width: 20px;
+.block-1 {
+  width: 30px;
   height: 100px;
-  margin-left: 490px;
+  margin: 0 auto;
 }
 
-.block-20 {
-  width: 200px;
-  height: 20px;
-  margin-left: 490px;
+.block-2 {
+  height: 30px;
+  width: 100px;
+  margin-left: 415px;
 }
 
-.block-30 {
-  width: 20px;
-  height: 200px;
-  margin-left: 670px;
-}
-
-.block-40 {
-  width: 400px;
-  height: 20px;
-  margin-left: 290px;
-}
-
-.block-50 {
-  width: 20px;
-  height: 200px;
-  margin-left: 290px;
-}
-
-.block-60 {
-  width: 200px;
-  height: 20px;
-  margin-left: 290px;
-}
-
-.block-70 {
-  width: 20px;
+.block-3 {
+  width: 30px;
   height: 100px;
-  margin-left: 470px;
+  margin-left: 415px;
 }
 
-.block-80 {
+.block-4 {
+  height: 30px;
   width: 200px;
-  height: 20px;
-  margin-left: 470px;
+  margin-left: 415px;
 }
 
-.block-90 {
-  width: 20px;
+.block-5 {
+  width: 30px;
   height: 100px;
-  margin-left: 650px;
+  margin-left: 585px;
 }
 
-.finish {
+.block-6 {
+  height: 30px;
+  width: 100px;
+  margin-left: 515px;
+}
+
+.block-7 {
+  width: 30px;
+  height: 100px;
+  margin-left: 515px;
+}
+
+.block-8 {
+  height: 30px;
+  width: 100px;
+  margin-left: 445px;
+}
+
+.block-9 {
+  height: 100px;
+  width: 30px;
+  margin-left: 445px;
+}
+
+.block_10 {
   width: 60px;
   height: 40px;
-  margin-left: 630px;
   padding: 10px;
+  margin-left: 429px;
 }
