--- a/lesson_10/css/fonts.css
+++ b/lesson_10/css/fonts.css
@@ -11,25 +11,8 @@
 */
 
 @font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-regular.woff2") format("woff2");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-bold.woff2") format("woff2");
+	font-family: 'Circular Std';
+	src: url('../fonts/CircularStd-Bold.woff2') format('woff2');
 	font-weight: 700;
 	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Ua-Brand";
-	src: url("../fonts/ua-BRAND-black.woff2") format("woff2");
-	font-weight: 900;
-	font-style: normal;
-	font-display: swap;
 }
