--- a/lesson_10/css/style.css
+++ b/lesson_10/css/style.css
@@ -67,14 +67,27 @@
   box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.32);
 }
 
+.item-products:hover .item-products__aside {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.7s ease;
+}
+
+.item-products:hover .item-products__card {
+  background-color: #00B207;
+  color: #fff;
+}
+
 .item-products__aside {
   position: absolute;
   top: 16px;
   right: 16px;
   z-index: 2;
+  opacity: 0;
+  visibility: hidden;
 }
 
-.aside-products img {
+.aside-products svg {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -90,10 +103,18 @@
 .aside-products__view {
   position: relative;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background: #fff;
+  background-color: #fff;
+  color: #1A1A1A;
   border-radius: 50%;
   width: 40px;
   height: 40px;
+}
+
+.aside-products__like:hover,
+.aside-products__view:hover {
+  background-color: #00B207;
+  color: #fff;
+  cursor: pointer;
 }
 
 .item-products__img {
@@ -122,7 +143,8 @@
   position: absolute;
   width: 40px;
   height: 40px;
-  background-color: #00B207;
+  background-color: #F2F2F2;
+  color: #1A1A1A;
   border-radius: 50%;
   right: 11px;
   bottom: 11px;
@@ -130,9 +152,10 @@
 
 .item-products__card:hover {
   box-shadow: 0px 0px 12px 0px rgba(32, 181, 38, 0.5);
+  cursor: pointer;
 }
 
-.item-products__card img {
+.item-products__card svg {
   position: absolute;
   width: 20px;
   height: 20px;
