--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -13,7 +13,7 @@
 
 /* Основні стилі */
 .back-link {
-  display: inline-block;
+  display: inline-property;
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #28a745;
@@ -70,7 +70,7 @@ body {}
   font-weight: 900;
 }
 
-.blockquote {
+.propertyquote {
   color: #fff;
   background-color: #6faa43;
 }
