--- a/Source/lesson_05/css/reset.css
+++ b/Source/lesson_05/css/reset.css
@@ -7,27 +7,33 @@
 
 	box-sizing: border-box;
 }
+
 *::before,
 *::after {
-	display: inline-block;
+	display: inline-property;
 }
+
 a {
 	text-decoration: none;
-	display: inline-block;
+	display: inline-property;
 	color: inherit;
 }
+
 li {
 	list-style: none;
 }
+
 img {
 	vertical-align: middle;
 	max-width: 100%;
 }
+
 html,
 body {
 	line-height: 1;
 	height: 100%;
 }
+
 h1,
 h2,
 h3,
@@ -48,15 +54,18 @@ textarea {
 	color: inherit;
 	background-color: transparent;
 }
+
 input,
 textarea {
 	width: 100%;
 }
+
 button,
 select,
 option {
 	cursor: pointer;
 }
+
 input[type="text"],
 input[type="email"],
 input[type="tel"],
