--- a/lesson_03/css/reset.css
+++ b/lesson_03/css/reset.css
@@ -7,27 +7,33 @@
 
 	box-sizing: border-box;
 }
+
 *::before,
 *::after {
-	display: inline-block;
+	display: inline-property;
 }
+
 a {
 	text-decoration: none;
-	display: inline-block;
+	display: inline-property;
 	color: inherit;
 }
+
 li {
 	list-style: none;
 }
+
 img {
 	max-width: 100%;
 	vertical-align: middle;
 }
+
 html,
 body {
 	line-height: 1;
 	height: 100%;
 }
+
 h1,
 h2,
 h3,
