--- a/lesson_08/css/style.css
+++ b/lesson_08/css/style.css
@@ -13,7 +13,7 @@
 
 /* Основні стилі */
 .back-link {
-  display: inline-block;
+  display: inline-property;
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #28a745;
@@ -48,7 +48,7 @@ body {
 .page {}
 
 .logo p {
-  display: inline-block;
+  display: inline-property;
 }
 
 [class*="text"]:hover,
@@ -82,7 +82,7 @@ body {
 
 [class*="bg-text"],
 [class*="bg-bg"] {
-  display: inline-block;
+  display: inline-property;
   vertical-align: middle;
 }
 
@@ -95,7 +95,7 @@ body {
 }
 
 .icons_text {
-  display: inline-block;
+  display: inline-property;
 }
 
 .icon_location::before,
@@ -123,7 +123,7 @@ body {
 }
 
 .content_images p {
-  display: inline-block;
+  display: inline-property;
   padding-left: 20px;
 }
 
