--- a/lesson_12/css/style.css
+++ b/lesson_12/css/style.css
@@ -27,3 +27,13 @@
   background-color: #218838;
   transform: translateY(-2px);
 }
+
+.wrapper {
+  overflow: clip;
+  min-height: 100%;
+}
+
+.header {
+  margin-bottom: 20px;
+}
+
