--- a/lesson_11/css/style.css
+++ b/lesson_11/css/style.css
@@ -375,7 +375,7 @@
   left: 73px;
 }
 
-.car__body--bottom {
+.car__body-bottom {
   width: 616px;
   height: 79px;
   border-radius: 37px 64px 80px 110px;
